--- a/html/assets/css/_resets.css
+++ b/html/assets/css/_resets.css
@@ -23,7 +23,7 @@ input,
 select,
 table,
 textarea {
-    font-family: 'NanumSquareNeo', sans-serif;
+    font-family: 'Paperlogy', sans-serif;
     font-weight: 400;
     font-size: 16px;
     line-height: 1.6;
