--- a/html/assets/css/style.css
+++ b/html/assets/css/style.css
@@ -4,3 +4,200 @@
 @import url('./_resets.css');
 @import url('./_commons.css');
 @import url('./_admin.css');
+
+/* 모든 페이지 공통요소 */
+body {
+    max-width: 1000px;
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    background-color: #F1EFEE;
+
+    main {
+        flex: 1;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+
+    footer {
+        border-top: 2px solid #0D1938;
+        margin-left: 20px;
+        margin-right: 20px;
+        padding: 20px 0;
+        color: #555;
+        font-size: 14px;
+        text-align: center;
+        margin-top: 40px;
+        position: relative;
+    }
+
+    section {
+        text-align: center;
+        font-family: 'NanumSquareNeo', sans-serif;
+
+        >h2 {
+            font-size: 24px;
+            font-weight: 400;
+            color: #2e2e2e;
+            padding-top: 30px;
+            margin-bottom: 5px;
+        }
+
+        >p {
+            margin-bottom: 10px;
+            color: #666;
+            word-break: keep-all;
+        }
+    }
+}
+
+/* 헤더 영역 */
+.header-group {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+
+    h1 {
+        a {
+            display: flex;
+            align-items: center;
+            border-radius: 10px;
+            padding: 5px 10px;
+            color: #0D1938;
+
+            img {
+                width: 120px;
+            }
+        }
+    }
+
+    .header-btn {
+        display: flex;
+
+        div {
+            width: 40px;
+            height: 40px;
+            position: relative;
+
+            a {
+                display: inline-block;
+                width: 100%;
+                height: 100%;
+                text-align: center;
+                border-radius: 10px;
+                background-color: transparent;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: 24px 24px;
+                transition: background-color 400ms ease;
+
+                span {
+                    width: 80px;
+                    height: 30px;
+                    position: absolute;
+                    left: -50px;
+                    top: 54px;
+                    border: 2px solid #0D1938;
+                    display: inline-block;
+                    background: #fff;
+                    color: #0D1938;
+                    font-weight: 600;
+                    opacity: 0;
+                    visibility: hidden;
+                    transition: all 0.25s ease;
+                }
+
+                span::before {
+                    content: '';
+                    position: absolute;
+                    bottom: 27px;
+                    left: 62px;
+                    border-width: 8px;
+                    border-style: solid;
+                    border-color: transparent transparent #0D1938 transparent;
+                    opacity: 1;
+                }
+            }
+
+            a:hover {
+                span {
+                    top: 45px;
+                    opacity: 1;
+                    visibility: visible;
+                    background: #fff;
+                }
+            }
+
+            .plus {
+                background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%230D1938' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><path d='M2.992 16.342a2 2 0 0 1 .094 1.167l-1.065 3.29a1 1 0 0 0 1.236 1.168l3.413-.998a2 2 0 0 1 1.099.092 10 10 0 1 0-4.777-4.719'/><path d='M8 12h8'/><path d='M12 8v8'/></svg>");
+            }
+
+            .email {
+                background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='%230D1938' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'><path d='M22 13V6a2 2 0 0 0-2-2H4a2 2 0 0 0-2 2v12c0 1.1.9 2 2 2h8'/><path d='m22 7-8.97 5.7a1.94 1.94 0 0 1-2.06 0L2 7'/><path d='M19 16v6'/><path d='M16 19h6'/></svg>");
+
+            }
+        }
+    }
+}
+
+/* 검색 영역 */
+.search-group {
+    width: 100%;
+    border: 2px solid #0D1938;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    height: 70px;
+    border-radius: 50px;
+    padding: 0 10px;
+
+    h1 {
+        padding-left: 20px;
+
+        img {
+            width: 110px;
+            display: block;
+        }
+    }
+
+    form {
+        flex: 1;
+
+        fieldset {
+            display: flex;
+            align-items: center;
+            gap: 16px;
+        }
+
+        input[type="text"] {
+            flex: 1;
+            width: 100%;
+            padding: 10px 20px;
+            font-size: 20px;
+            border-radius: 50px;
+            outline: none;
+            background-color: transparent;
+        }
+
+        .search-btn {
+            flex: 0 0 auto;
+            width: 50px;
+            height: 50px;
+            background-color: #0D1938;
+            padding: 10px 20px;
+            border-radius: 50px;
+            background-repeat: no-repeat;
+            background-position: center;
+            background-size: 24px 24px;
+            background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' stroke='white' fill='none' stroke-width='2' viewBox='0 0 24 24'%3E%3Cpath d='M21 21L16.65 16.65M19 11C19 15.42 15.42 19 11 19C6.58 19 3 15.42 3 11C3 6.58 6.58 3 11 3C15.42 3 19 6.58 19 11Z'/%3E%3C/svg%3E");
+
+            &:hover {
+                background-color: #12265a;
+            }
+        }
+    }
+}
